# trustmebro

./: .gitignore  AGENTS.md  PRD.md  README.md  package-lock.json
.beads/: metadata.json
ai-engine/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai-engine/src/: __init__.py  config.py  main.py
ai-engine/src/lanes/: base.py  copywriting.py  data_entry.py  router.py  software.py  translation.py
ai-engine/src/utils/: github_client.py  logger.py  openai_client.py  plagiarism_client.py
backend/: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt
backend/src/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/src/routes/: __init__.py  auth.py  change_requests.py  chat.py  dashboard.py  disputes.py  escrow_submissions.py  jobs.py  payments.py  scheduler.py  uploads.py  users.py  verify.py
backend/src/services/: __init__.py  bro_mediator.py  email_service.py  ghost_protocol.py
backend/src/utils/: __init__.py  deadline.py  enforcement.py  logger.py  notifications.py
docs/: AI_MEDIATOR.md  BUILD_PLAN.md  CHANGE_REQUESTS.md  CONTRACTS.md  DESIGN_PLAN.md  ESCROW_PAYOUT.md  FRONTEND_REQUIREMENTS.md  HACKATHON_PLAN.md  PFI_SCORING.md  SPEC_PIPELINE.md  UI_DESIGN.md  USER_STORIES.md  VERIFICATION.md
docs/UI guides/: Universal-UI-design.md  css-architecture.md  design-system-generator.md  micro-interactions.md
docs/epics/: EPIC_01_AUTH.md  EPIC_02_JOB_CREATION.md  EPIC_03_BIDDING.md  EPIC_04_NEGOTIATION.md  EPIC_05_ESCROW.md  EPIC_06_SUBMISSIONS.md  EPIC_07_VERIFICATION.md  EPIC_08_PAYMENT.md
frontend/: .env.example  components.json  package-lock.json  package.json  styleguide.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/employer/: layout.tsx
frontend/app/freelancer/: layout.tsx
frontend/app/login/: page.tsx
frontend/app/payments/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/bids/: BidCard.tsx  BidForm.tsx
frontend/components/chat/: AIInterceptBanner.tsx  ChatBubble.tsx
frontend/components/home/: Footer.tsx  Hero.tsx
frontend/components/jobs/: GigTypeBadge.tsx  JobCard.tsx  (+3 more)
frontend/data/: dummy_bids.ts  dummy_chat.ts  dummy_jobs.ts  dummy_spec.ts  dummy_users.ts  dummy_verification.ts
frontend/store/: auth.ts
frontend/types/: index.ts
shared/: package.json  tsconfig.json
shared/types/: index.ts
(+35 files in other folders)
